@@ -1,6 +1,7 @@
 package com.poc.modularite.java.dao.impl.dao;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.springframework.stereotype.Repository;
@@ -22,22 +23,24 @@ public class EmployeeDAO implements IEmployeeDAO {
 	@Override
 	public List<EmployeeDTO> findAll() {
 
-		return this.employeeRepo.findAll().stream().map(m -> new EmployeeDTO().modelToDTOWithChildTable(m)).toList();
+		return this.employeeRepo.findAll().stream().map(m -> new EmployeeDTO().modelToDTOWithChildTable(m))
+				.collect(Collectors.toList());
 	}
 
 	@Override
 	public List<EmployeeDTO> findAllById(Iterable<Integer> ids) {
 
 		return this.employeeRepo.findAllById(ids).stream().map(m -> new EmployeeDTO().modelToDTOWithChildTable(m))
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	@Override
 	public List<EmployeeDTO> saveAll(Iterable<EmployeeDTO> dtos) {
 
-		return this.employeeRepo.saveAll(
-				StreamSupport.stream(dtos.spliterator(), false).map(d -> d.convertToModelWithChildTable()).toList())
-				.stream().map(m -> new EmployeeDTO().modelToDTOWithChildTable(m)).toList();
+		return this.employeeRepo
+				.saveAll(StreamSupport.stream(dtos.spliterator(), false).map(d -> d.convertToModelWithChildTable())
+						.collect(Collectors.toList()))
+				.stream().map(m -> new EmployeeDTO().modelToDTOWithChildTable(m)).collect(Collectors.toList());
 	}
 
 	@Override
