@@ -1,6 +1,7 @@
 package com.poc.modularite.java.dao.impl.dao;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.springframework.stereotype.Repository;
@@ -22,20 +23,21 @@ public class EntrepriseDAO implements IEntrepriseDAO {
 	@Override
 	public List<EntrepriseDTO> findAll() {
 		return this.entrepriseRepo.findAll().stream().map(m -> new EntrepriseDTO().modelToDTOWithChildTable(m))
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	@Override
 	public List<EntrepriseDTO> findAllById(Iterable<Integer> ids) {
 		return this.entrepriseRepo.findAllById(ids).stream().map(m -> new EntrepriseDTO().modelToDTOWithChildTable(m))
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	@Override
 	public List<EntrepriseDTO> saveAll(Iterable<EntrepriseDTO> dtos) {
-		return this.entrepriseRepo.saveAll(
-				StreamSupport.stream(dtos.spliterator(), false).map(d -> d.convertToModelWithChildTable()).toList())
-				.stream().map(m -> new EntrepriseDTO().modelToDTOWithChildTable(m)).toList();
+		return this.entrepriseRepo
+				.saveAll(StreamSupport.stream(dtos.spliterator(), false).map(d -> d.convertToModelWithChildTable())
+						.collect(Collectors.toList()))
+				.stream().map(m -> new EntrepriseDTO().modelToDTOWithChildTable(m)).collect(Collectors.toList());
 	}
 
 	@Override
